# routes/products.js
@@ -2,15 +2,25 @@ const express = require("express");
 const router = express.Router();
 
 const productsController = require("../controllers/products");
+const {
+  idMiddleware,
+  productsMiddleware,
+} = require("../middleware/validateProduct");
 
 router.get("/", productsController.getAll);
 
-router.get("/:id", productsController.getSingle);
+router.get("/:id", idMiddleware, productsController.getSingle);
 
-router.post("/", productsController.createProduct);
+router.post("/", productsMiddleware, productsController.createProduct);
 
-router.put("/:id", productsController.updateProduct);
+router.put(
+  "/:id",
 
-router.delete("/:id", productsController.deleteProduct);
+  idMiddleware,
+  productsMiddleware,
+  productsController.updateProduct,
+);
+
+router.delete("/:id", idMiddleware, productsController.deleteProduct);
 
 module.exports = router;
