# server.js
@@ -20,7 +20,7 @@ mongodb.initDb((err) => {
   } else {
     app.listen(port, () => {
       console.log(
-        `Database is listening and node Running on port ${port} \nhttp://localhost:${port}/\nThe second web is http://localhost:${port}/products`,
+        `Database is listening and node Running on port ${port} \nhttp://localhost:${port}/\nThe second web is http://localhost:${port}/products\n Api Documentation: http://localhost:${port}/api-docs`,
       );
     });
   }
